--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,9 @@ build
 dist
 node_modules
 
+# Frontend environment files
+frontend/.env
+frontend/.env.*
+!frontend/.env.example
+!frontend/.env.*.example
+
