--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,19 @@ services:
     volumes:
       - storage:/var/www/localhost/htdocs/storage
 
+  frontend:
+    image: node:24.8.0-alpine
+    working_dir: /app
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./frontend:/app:cached
+    command: sh -c "yarn install && yarn dev"
+    environment:
+      - VITE_HOST=0.0.0.0
+    depends_on:
+      - tomcat
+
 volumes:
   mysql-data:
   solr-data:
