Add GraphQL codegen setup to frontend.
Introduced codegen.yml for GraphQL code generation, added related environment variables to .env.example, and added a 'codegen' script to package.json for generating TypeScript types and documents from the GraphQL schema.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -5,3 +5,7 @@
 # Override service type for local testing
 VITE_SERVICE_TYPE=mock
 VITE_FORCE_GLOBAL_SERVICE_TYPE=true
+
+VITE_GRAPHQL_ENDPOINT=
+VITE_GRAPHQL_CLIENT_ID=
+VITE_GRAPHQL_CLIENT_SECRET=
