Add schema diff and backup scripts to package.json.
Introduces scripts for backing up the GraphQL schema, running diffs between schema versions, and combining code generation with schema diffing. These additions help streamline schema change tracking and code generation workflows.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "codegen": "graphql-codegen --require dotenv/config"
+    "codegen": "graphql-codegen --require dotenv/config",
+    "schema:backup": "node -e \"try{require('fs').copyFileSync('schema.graphql','schema.previous.graphql')}catch{}\"",
+    "schema:diff": "graphql-inspector diff schema.previous.graphql schema.graphql",
+    "codegen:diff": "yarn schema:backup && yarn codegen && yarn schema:diff"
   },
   "dependencies": {
     "antd": "^5.8.6",
