Add health check GraphQL query and update codegen
Added a new health check query in src/queries/health.graphql. Updated codegen.yml to include .graphql documents, and regenerated the TypeScript types and documents in src/generated/graphql.ts to support the new query.

--- a/frontend/codegen.yml
+++ b/frontend/codegen.yml
@@ -3,6 +3,7 @@ schema:
       headers:
         X-Client-ID: ${VITE_GRAPHQL_CLIENT_ID}
         X-Client-Secret: ${VITE_GRAPHQL_CLIENT_SECRET}
+documents: src/queries/*.graphql
 generates:
   src/generated/graphql.ts:
     plugins:
